# fimex

./: .cdtproject  .cproject  .cvsignore  .gitignore  .gitmodules  .project  AUTHORS  CHANGELOG  CHANGES.md  CMakeLists.txt  COPYING  Doxyfile  Doxyfile.in  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  cmake-variants.yaml  config.h.in  config.status  configure  configure.ac  doxydoc.txt  export-config.cmake.in  export-noversion-config-version.cmake.in  export-noversion-config.cmake.in  fimex-config.cmake.in  fimex-noversion-config-version.cmake.in  fimex-noversion-config.cmake.in  fimex-noversion.pc.in  fimex.files  fimex.includes  fimex.pc.in  fimex.sms  fimex_h12.sms  fimexf-noversion.pc.in  fimexf.pc.in  (+5 more)
include/fimex/: AggregationReader.h  ArrayLoop.h  CDM.h  CDMAttribute.h  CDMBorderSmoothing.h  CDMBorderSmoothing_Linear.h  CDMDataType.h  CDMDimension.h  CDMException.h  CDMExtractor.h  CDMFileReaderFactory.h  CDMInterpolator.h  CDMMerger.h  CDMMerger_LinearSmoothing.h  CDMNamedEntity.h  CDMOverlay.h  CDMPressureConversions.h  CDMProcessor.h  CDMQualityExtractor.h  CDMReader.h  CDMReaderDecl.h  CDMReaderUtils.h  CDMReaderWriter.h  CDMTimeInterpolator.h  CDMUtils.h  CDMVariable.h  CDMVerticalInterpolator.h  CDMWriter.h  CDM_XMLConfigHelper.h  CDMconstants.h  CMakeLists.txt  C_CDMReader.h  CachedForwardInterpolation.h  CachedInterpolation.h  CachedVectorReprojection.h  ChunkReader.h  ChunkReaderFactory.h  ChunkReaderXmlInputCtx.h  CoordinateSystemSliceBuilder.h  CrossSectionDefinition.h  (+93 more)
modules/F90/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  _gfortran_iargc.c  c_mifi.c  fimex.f90  fimex2d.F90  fimex2d_example.F90  fimex2d_example.cdl  fortran_test.f90  mifi.f90  run.sh  run_example2d.sh  testFortran.F90  testOut.cdl
modules/RFimex/: DESCRIPTION  NAMESPACE  README  configure  configure.ac
modules/python/: CMakeLists.txt  pyfimex0.cc  pyfimex0_AggregationReader.cc  pyfimex0_CDM.cc  pyfimex0_CDMExtractor.cc  pyfimex0_CDMInterpolator.cc  pyfimex0_CDMMerger.cc  pyfimex0_CDMReader.cc  pyfimex0_CDMReaderWriter.cc  pyfimex0_CDMTimeInterpolator.cc  pyfimex0_CDMVerticalInterpolator.cc  pyfimex0_CDMWriter.cc  pyfimex0_CoordinateSystem.cc  pyfimex0_Data.cc  pyfimex0_NcmlCDMReader.cc  pyfimex0_NetCDF_CDMWriter.cc  pyfimex0_helpers.h  pyfimex0_logging.cc  test_pyfimex0.py  test_pyfimex0_PyCDMReader.py  test_pyfimex0_coordinatesystem.py  test_pyfimex0_extractor.py  test_pyfimex0_interpolator.py  test_pyfimex0_merger.py  test_pyfimex0_netcdf.py  test_pyfimex0_netcdf_cdmreaderwriter.py  test_pyfimex0_netcdf_cdmwriter.py  test_pyfimex0_vertical_interpolator.py
modules/xarray/: README.md  pyproject.toml
share/etc/: CMakeLists.txt  Makefile.am  Makefile.in  cdmFillWriterConfig.xml  cdmFillWriterConfig.xsd  cdmGribReaderConfig.xml  cdmGribReaderConfig.xsd  cdmGribReaderConfigArome2_5.xml  cdmGribReaderConfigECEnsWave.xml  cdmGribReaderConfigEC_MAD.xml  cdmGribReaderConfigGlameps.xml  cdmGribReaderConfigSMHI.xml  cdmGribReader_variables_ecwam.xml  cdmGribWriterConfig.xml  cdmGribWriterConfig.xsd  cdmGribWriterConfigAromeHRS.xml  cdmMetGmReaderConfig.xml  cdmMetGmWriterConfig.xml  cdmMetgmReaderConfig.xml  cdmQualityConfig.xml  cdmQualityConfig.xsd  cdmWriterConfig.dtd  cdmWriterConfig.xml  cdmWriterConfigDeprecated.xml  damocles_ec_felt_global_attributes.xml  damocles_ec_ocean_felt_global_attributes.xml  damocles_felt2nc_variables.xml  damocles_felt_axes.xml  damocles_felt_global_attributes.xml  example.wdb.conf  felt2nc_eps_yr.xml  felt2nc_frohavet.xml  felt2nc_means.xml  felt2nc_proff.xml  felt2nc_snap.xml  felt2nc_variables.dtd  felt2nc_variables.xml  felt2nc_variables_ec_mad.xml  felt2nc_variables_ec_mad_0_25.xml  felt2nc_variables_ec_mad_0_5.xml  (+39 more)
src/: .cvsignore  AggregationReader.cc  ArrayLoop.cc  CDM.cc  CDMAttribute.cc  CDMBorderSmoothing.cc  CDMBorderSmoothing_Linear.cc  CDMDataType.cc  CDMDimension.cc  CDMExtractor.cc  CDMFileReaderFactory.cc  CDMInterpolator.cc  CDMMergeUtils.cc  CDMMergeUtils.h  CDMMerger.cc  CDMMerger_LinearSmoothing.cc  CDMNamedEntity.cc  CDMOverlay.cc  CDMPressureConversions.cc  CDMProcessor.cc  CDMQualityExtractor.cc  CDMReader.cc  CDMReaderUtils.cc  CDMReaderWriter.cc  CDMTimeInterpolator.cc  CDMUtils.cc  CDMVariable.cc  CDMVerticalInterpolator.cc  CDMWriter.cc  CDM_XMLConfigHelper.cc  CDM_XMLConfigHelper.h  CDMconstants.c  CDMconstants.cc  CMakeLists.txt  C_CDMReader.cc  CachedForwardInterpolation.cc  CachedForwardInterpolation.h  CachedInterpolation.cc  CachedVectorReprojection.cc  ChunkReader.cc  (+135 more)
src/binSrc/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.in  egil.cfg  fiGrbmlCat.cc  fiGribCut.cc  fiIndexGribs.cc  fiXYcontents.cc  fimex.cc  fimex.cfg  fimex_damocles.cfg  fimex_ec.cfg  fimex_ec_0_25.cfg  fimex_ec_0_5.cfg  fimex_ec_wav.cfg  fimex_hirlam12.cfg  fimex_hirlam20.cfg  fimex_mersea.cfg  fimex_nc2nc.cfg  fimex_testgrbh12.cfg  indexGribs.cc  testy.grb
src/convert/: CDMReaderVar.h  Converter.cc  Converter.h  ConverterImpl.cc  ConverterImpl.h  ConverterSrc.cc  ConverterSrc.h  RelativeToSpecificHumidityConverter.cc  RelativeToSpecificHumidityConverter.h
src/coordSys/: AlbersConicalEqualAreaProjection.cc  AzimuthalEquidistantProjection.cc  CF1_xCoordSysBuilder.cc  CF1_xCoordSysBuilder.h  CoordSysBuilder.h  CoordSysImpl.h  CoordSysUtils.cc  CoordSysUtils.h  (+28 more)
test/: .cvsignore  ArraySqrtPerformanceTest.java  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  Wdb2CdmBuilderTest.cc  WdbConfigurationTest.cpp  WdbIndexTest.cc  arraySqrtPerformance.cc  c11.nc  c11.ncml  cdmGribReaderConfig_newEarth.xml  cdmGribWriterConfig_append.xml  cdmcmp.cc  char.nc  coordRefTimeTest.nc  coordTest.cdl  coordTest.nc  diana.setup  erai.sfc.40N.0.75d.200301011200.nc  felt2nc_variables_level1000.xml  felt2netcdf.cfg  felt2valueInterpolator.cfg  fiGrbmlCat.sh.in  fiIndexGribs.sh.in  fillIn2.nc  fillIn3.nc  fillInterpolator.cfg  fillWriterConfig.xml  fimex.sh.in  fimex_test_config.h.in  hirlam.ncml  hirlam12.nc  inData.txt  interpolator_forward_in.nc  local_wdb_config.xml  longlatcemap.ncl  merge_target_base.nc  merge_target_top.nc  (+175 more)
(+574 files in other folders)
